# equipo-1

./: .gitignore  README.md  business-narrative.md  pyproject.toml  technical-brief.md
docs/: ds-documentation-guide.md  stage-2-notebooks-guide.md  stage-2-operational-glossary.md
notebooks/: 01_descarga_y_exploracion.py  02_preparacion_y_features.py  03_modelo_y_evaluacion.py  bitacora-de-peliculas-y-series.py
